--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
   <body>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  	<script src="js/p5.sound.min.js"></script>
+  	<script src="js/p5.min.js"></script>
   </body>
 
 </html>
