--- a/public/test.html
+++ b/public/test.html
@@ -17,17 +17,27 @@
   
   <script language="javascript" type="text/javascript">
 
-	var promise = $.ajax('http://myassist.eu-gb.mybluemix.net/test-ton.wav', 'get');
-	var wav_text = promise.responseText;
-	var length = wav_text.length;
-	var buf = new ArrayBuffer(length);
-	var view = new Uint8Array(buf);
+	var promise = $.ajax('http://myassist.eu-gb.mybluemix.net/test-ton.wav', 'get'),
+		wav_text = null,
+		len = 0,
+		buf = null,
+		view = null,
+		blob = null;
 	
-	for(var i = 0; i < length; i++) {
-		view[i] = wav_text.charCodeAt(i) & 0xff;
-	}
+	promise.done(function() {
+		wav_text = promise.responseText;
+		len = wav_text.length;
+		buf = new ArrayBUffer(length);
+		view = new Uint8Array(buf);
+		
+		for(var i = 0; i < len; i++) {
+			view[i] = wav_text.charCodeAt(i) & 0xff;
+		}
+		
+		blob = new Blob([view], {type: "audop/x-wav"});
+		doSend();
+	});
 	
-	var blob = new Blob([view], {type: "audio/x-wav"});
 
   var wsUri = "wss://stream.watsonplatform.net/speech-to-text/api/v1/recognize?watson-token=hOpFjYai7xmPq%2FJFN5pw21uw0ktFd%2BA%2B%2BveCVS8uPnJlxpdil66%2Fm9rKUru7ewL4E6FQdXKe%2F26gVAbCunhJlFOQ0uIADPECVqABXUP5tov3n4Jop1JEnP%2F7CwwPdL%2BEeGyta%2FzSaUfCPwilPLtrlbZOrJwpMxaD1JBxji1hRcbloZDIOUInubZI9gcTQzkb1%2BhXpT0ny4m46Jf7W5CN2IAHlsSeTxeaimB2opR5%2FI3euz90Ytz5PhX%2B4fxUKrJH9%2Bc9rEr4YMH5XFSJBuPYEOsSvs8eKfVfQlSO7YMAd8njfbBH87eRC0Xvh3aEYKKNTAT6CTopI5EF4HeZhiL9riyDQnb7Odsq2dKSxKDOYrZikd4wSgCjU%2FyABdtoixB4Ra83XnmvqHZJ6b4WHq2npeEQw%2BuhMgbl3i9ZUibtNEibPbsNGSs%2BJsdMMvN6rqxKn975gjLub1i6ckyEUPlq8Js7oJ9gplq6G1RfR8dQ9V8EUqIh08YB0hRksXW7xBJ%2FICp7wwmCRmwpKpUTRScPugQnLxrg1YNVlY4%2FZ%2FJEXjow5HiDAsBFx07REzfdfoARAwD6ueYErySy79IzzASiixgSOZil7jxqnSUd1Eh5mpAnagpI6ECes7DCYOu%2Byws%2BJi%2FAyGD8ib9s%2FEc4UUd1xtxJNQZFuf9oBXkuYFK6uwUQ6K0LuFWRX4id62ge4xQOQECHyzRRmR0ynk8d5bQ3bLoT%2BFZa77%2F09t%2FaU3Qp%2BNHtDgYepQn%2FKkfipbmm2ZPbWXACgmKKsNqUZjW0R5owCJG96T5pQG%2F22yPb%2BQjQQhEk7wlLr4sm%2BiRloQfTOIC8FaBZjctc4bUrFqMJaTAfyw2%2FUA2RDyrspdRZ4%2FU9LiQY1TLr3Rn2TQKGZCDIhDl8&model=en-US_BroadbandModel";
   var output;
@@ -51,7 +61,7 @@
   function onOpen(evt)
   {
     writeToScreen("CONNECTED");
-    doSend("WebSocket rocks");
+    //doSend("WebSocket rocks");
   }
 
   function onClose(evt)
@@ -70,7 +80,7 @@
     writeToScreen('<span style="color: red;">ERROR:</span> ' + evt.data);
   }
 
-  function doSend(message)
+  function doSend()
   {
     writeToScreen("SENT: " + message);
      var message = {'action': 'start', 'content-type': 'audio/l16;rate=22050'};
